Fix button alignment for iphone
Sorry mischa, we've hacked the grid.

--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -226,3 +226,9 @@
   padding: 0;
   margin: 0;
 }
+
+@media only screen and (max-width: 400px) {
+  .Items .shoppingList {
+    grid-template: auto / 5% 5% 45% 5% 20% 4% 7% 4% 7%;
+  }
+}
